codex-rs/tui/src/bottom_pane/async_questions/snapshots/codex_tui__bottom_pane__async_questions__tests__question_multiline.snap
---
source: tui/src/bottom_pane/async_questions/state_tests.rs
expression: "rendered[0]"
---

  1 of 2

  Run this command:

  ```sh
  printf '診 断 '
  ```
  Then review (https://example.com/diagnostics?view=full)?


  Type your answer

  enter submit   ⌃] discard   ⇧→ main prompt
  ⇧← next question
