codex-rs/tui/src/bottom_pane/async_questions/snapshots/codex_tui__bottom_pane__async_questions__tests__question_wrapped_url.snap
---
source: tui/src/bottom_pane/async_questions/state_tests.rs
expression: "crate::terminal_hyperlinks::strip_osc8(&buffer_text(&buffer))"
---

  2 of 2
  Review this change (https://
  github.com/openai/codex/pull/12345?
  diff=split)?

  › 1. Named
    2. Other

  enter submit   ⌃] discard
  ⇧→ prev question
